examples/test/testpolicy3359.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3359
  namespace: namespace49
spec:
  podSelector:
    matchLabels:
      key14: value0
      key39: value32
      key4: value27
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key30: value32
          key34: value49
      podSelector:
        matchLabels:
          key41: value0
